# afs

./: .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md
cmake/: afs-config.cmake.in
dope/: deps.yml
include/afs/: afs-mem-alloc-tmp.hpp  afs.hpp
include/afs/jthread/: jthread-impl.hpp  jthread.hpp
test/: CMakeLists.txt
test/src/: main.cpp
